@startuml Overview

class main {
    ..assignments..
    app = BudgetApp()
    __methods__
    +main()
}

class BudgetApp {
    ..assignments..
    lp = LoginPage()
    dashboard = Dashboard()
    backend = Backend()
    __methods__
    +start()
    +backend.initializeDB()
    +nextAction()
    +login()
    +createUser()
}

package SQLite <<Database>> {
    class Backend { 
        ..attributes..
        username
        balance
        __methods__
        +initializeDB()
        +checkLogin()
        +checkUser()
        +insertUser()
        +recentTransactions()
        +getBalance()
        +addTransactions()
        +getTransactions()
        +printDB()
    }
}

class LoginPage {
    ..assignments..
    backend = Backend()
    __methods__
    +login()
    +createUser()
}

class Dashboard {
    ..assignments..
    backend = Backend()
    __methods__
    +start()
    +nextAction()
    +recentTransactions()
    +createTransaction()
    +viewTransaction()
}

main::main -down-> BudgetApp::start : app.start()

BudgetApp .up.> main : exit
BudgetApp -down-> Backend : initialize DB
BudgetApp -left-> LoginPage : login/create user
BudgetApp -right-> Dashboard : dashboard.start()

LoginPage --> Backend : verify/insert user
LoginPage ..> BudgetApp : loginSuccess =true/false

Dashboard ..> BudgetApp : exit
Dashboard --> Backend : add/view transactions

Backend ..> LoginPage : userExist=true/false
Backend ..> Dashboard : balance/transactions
@enduml